update stroomt_design to v1.6

--- a/stroomt_design/index.html
+++ b/stroomt_design/index.html
@@ -7,6 +7,7 @@
 	
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="robots" content="noindex, nofollow" />
 	
 	<title>Inloggen | Catharijne College</title>
 
@@ -31,9 +32,11 @@
 			<img id="logo" src="img/temp_logo.png" /> <!-- DIT IS HET LOGO -->
 			<h1 class="mainTitle"></h1>				        <!-- HIER KAN EEN TITEL -->
 			<ul class="langSelect">
-				<li class="active"><a href="#">NL</a>
-				<li><a href="#">EN</a>
-				<li><a href="#">DE</a>
+				<li class="active"><a href="#">NL</a></li>
+				<li><a href="#">EN</a></li>
+				<li><a href="#">DE</a></li>
+				<!--<li><a href="#">FR</a></li>
+				<li><a href="#">ES</a></li>-->
 			</ul>
 		</div>
 		<!-- EINDE HEADER MET LOGO, EVENTUELE TITEL EN TAAL TOGGLE -->
@@ -41,14 +44,14 @@
 		<div id="content">
 			<!-- LOGIN VELD MET BIJBEHOREN -->
 			<div class="item">
-				<h1>Log in met uw account</h1>
-				<p class="info">Geef uw catharijne e-mailadres en uw wachtwoord. Uw catharijne e-mailadres begint met uw personeelsnummer of studentekaart nummer.</p>
-				<p class="error">Uw catharijne e-mail en/of wachtwoord zijn niet bekend</p> <!-- ERRORHANDLER BIJ HET INLOGGEN -->
+				<h1>Log in</h1>
+				<p class="info">Vul je catharijne e-mailadres en wachtwoord in. Je Catharijne e-mail begint met je collegekaart- of personeelsnummer.</p> <!-- ERRORHANDLER BIJ HET INLOGGEN -->
+				<p class="error">Je catharijne e-mail en/of wachtwoord zijn niet bekend</p> <!-- ERRORHANDLER BIJ HET INLOGGEN -->
 				
 				<form id="login" method="POST" action="storing.html">
-					<label for="username">Catharijne e-mail:</label><span class="example">(bv. 123456@catherijne.nl)</span>
+					<label for="username">Catharijne e-mail</label><span class="example">(bv. 123456@c-college.nl)</span>
 					<input type="text" name="username" id="username" autocomplete= "off" />
-					<label for="password">Wachtwoord:</label>
+					<label for="password">Wachtwoord</label>
 					<input type="password" name="password" id="password" autocomplete= "off" />
 					<a href="#" class="recover">Wachtwoord vergeten?</a>
 					<input type="submit" name="submit" id="submit" value="Inloggen" />
@@ -62,9 +65,9 @@
 			  <div class="createIndex">
 				 <ul>
 					<h2>Tips:</h2>
-					<li><b>Sluiten uw browser af om misbruik te voorkomen.</b> U inlog blijft behouden voor alle websites en applicaties die ervan gebruikmaken zolang u uw browser niet afsluit. </li>
-					<li>Controleer altijd voorafgaand aan het inlog de URL van deze pagina. Deze moet beginnen met <b>https://federatie.c-college.nl</b></li>
-					<li>Heeft uw aanhoudende problemen heeft met inloggen? Neem dan contact opnemen met de servicedesk: email <a href="mailto: servicedesk@c-college.nl">servicedesk@c-college.nl</a>, telefoon 088-4699070</li>
+					<li><b>Sluit je browser af om misbruik te voorkomen.</b> Je inloggegevens blijven actief bij alle websites en applicaties die ervan gebruikmaken als je je browser niet afsluit.</li>
+					<li>Controleer voordat je inlogt de URL van deze pagina. De URL moet beginnen met <b>https://federatie.c-college.nl</b></li>
+					<li>Heb je problemen met inloggen? Neem dan contact opnemen met de servicedesk: e-mail <a href="mailto: servicedesk@c-college.nl">servicedesk@c-college.nl</a>, telefoon 088-4699070</li>
 				</ul>
 			 </div>
 			</div>
