--- a/stroomt_design/storing.html
+++ b/stroomt_design/storing.html
@@ -7,10 +7,11 @@
 	
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="robots" content="noindex, nofollow" />
 	
 	<title>Inloggen | Catharijne College</title>
 
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" media="screen and (max-width: 370px)" href="css/style_320.css" />
 	<link rel="stylesheet" media="screen and (max-device-width: 480px), handheld" href="css/style_480.css" />
 
@@ -36,10 +37,10 @@
 			<!-- CONTENT MET WITTE ACHTERGROND -->
 			<div class="item">
 				<h1>Technische storing</h1>
-				<p>Inloggen bij het Catharijne college is momenteel niet mogelijk. Probeer het later opnieuw.</p>
+				<p>Inloggen bij het Catharijne college is op dit moment niet mogelijk. Probeer het later opnieuw.</p>
 				<p>
-					Bij aanhoudende problemen kunt u contact opnemen met <a href="https://servicedesk.c-college.nl" target="_blank">https://servicedesk.c-college.nl</a>, telefoon 088-4699070 
-					of email&nbsp;<a href="mailto: servicedesk@c-college.nl">servicedesk@c-college.nl</a>
+					Bij aanhoudende problemen kun je contact opnemen met <a href="https://servicedesk.c-college.nl" target="_blank">https://servicedesk.c-college.nl</a>, telefoon 088-4699070 
+					of e&#8209;mail&nbsp;<a href="mailto: servicedesk@c-college.nl">servicedesk@c-college.nl</a>
 				</p>
 				<p>
 					Vermeld de volgende foutcode: <br />
