upgrade design to v1.8

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 			<ul class="langSelect">
 				<li class="active"><a href="#">NL</a></li>
 				<li><a href="#">EN</a></li>
-				<!--<li><a href="#">DE</a></li>
-				<li><a href="#">FR</a></li>
-				<li><a href="#">ES</a></li>-->
+				<li><a href="#">DE</a></li>
 			</ul>
 		</div>
 		<!-- EINDE HEADER MET LOGO, EVENTUELE TITEL EN TAAL TOGGLE -->
@@ -67,7 +65,7 @@
 					<h2>Tips:</h2>
 					<li><b>Sluit je browser af om misbruik te voorkomen.</b> Je inloggegevens blijven actief bij alle websites en applicaties die ervan gebruikmaken als je je browser niet afsluit.</li>
 					<li>Controleer voordat je inlogt de URL van deze pagina. De URL moet beginnen met <b>https://federatie.c-college.nl</b></li>
-					<li>Heb je problemen met inloggen? Neem dan contact op met de servicedesk: e-mail <a href="mailto: servicedesk@c-college.nl">servicedesk@c-college.nl</a>, telefoon 088-4699070</li>
+					<li>Heb je problemen met inloggen? Neem dan contact op met de servicedesk: e-mail <a href='mailto:servicedesk@c-college.nl'>servicedesk@c-college.nl</a>, telefoon 088-4699070</li>
 				</ul>
 			 </div>
 			</div>
